test/build_errors/compile_error/hello.cpp
int main()
{
    int i = 10
}